# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2005-02-02 17:05:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-190

    Summary:
      checkpointing
    Revision:
      missingh--head--0.7--patch-190


    new files:
     testsrc/tmp/.arch-ids/=id

    modified files:
     ChangeLog Makefile libsrc/MissingH/AnyDBM/StringDBM.hs
     testsrc/AnyDBMtest.hs

    new directories:
     testsrc/tmp testsrc/tmp/.arch-ids


2005-02-02 16:47:12 GMT	John Goerzen <jgoerzen@complete.org>	patch-189

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-189


    modified files:
     ChangeLog libsrc/MissingH/AnyDBM/StringDBM.hs
     libsrc/MissingH/IO/HVFS.hs testsrc/AnyDBMtest.hs


2005-02-02 16:31:52 GMT	John Goerzen <jgoerzen@complete.org>	patch-188

    Summary:
      Checkpointing AnyDBM testing
    Revision:
      missingh--head--0.7--patch-188


    new files:
     testsrc/AnyDBMtest.hs

    modified files:
     ChangeLog libsrc/MissingH/AnyDBM.hs testsrc/Tests.hs


2005-02-02 04:03:46 GMT	John Goerzen <jgoerzen@complete.org>	patch-187

    Summary:
      checkpointing
    Revision:
      missingh--head--0.7--patch-187


    modified files:
     ChangeLog libsrc/MissingH/AnyDBM/StringDBM.hs


2005-02-01 23:00:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-186

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-186


    modified files:
     ChangeLog libsrc/MissingH/AnyDBM/StringDBM.hs
     libsrc/MissingH/IO/HVFS.hs


2005-02-01 22:18:39 GMT	John Goerzen <jgoerzen@complete.org>	patch-185

    Summary:
      Added StringDBM
    Revision:
      missingh--head--0.7--patch-185


    new files:
     libsrc/MissingH/AnyDBM/.arch-ids/=id
     libsrc/MissingH/AnyDBM/FiniteMapDBM.hs
     libsrc/MissingH/AnyDBM/StringDBM.hs

    modified files:
     ChangeLog MissingH.cabal libsrc/MissingH/AnyDBM.hs

    new directories: